<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="false"
            android:icon="@drawable/ic_homeicon"

            android:title="@string/home" />
        <item
            android:id="@+id/addMeal"
            android:checked="false"
            android:icon="@drawable/ic_plusicon"

            android:title="@string/addmeal" />

        <item
            android:id="@+id/profile"
            android:checked="false"
            android:icon="@drawable/ic_profileicon"
            android:title="@string/profile" />

        <item
            android:id="@+id/nutrition"
            android:checked="false"
            android:icon="@drawable/ic_nutritionicon"
            android:title="@string/nutrition_history" />
        <item
            android:id="@+id/health"
            android:checked="false"
            android:icon="@drawable/ic_historyicon"
            android:title="@string/health_history" />
    </group>
</menu>