<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view10"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginEnd="7dp"

        android:layout_marginStart="8dp"
        android:background="?android:attr/colorMultiSelectHighlight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:text="@string/nutrition_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/button_cholesterol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cholesterol"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/button_fats"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/button_fats"
        android:layout_marginRight="16dp" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="352dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_fats"
        tools:layout_editor_absoluteY="114dp"
        tools:layout_editor_absoluteX="16dp"
        android:layout_height="422dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_fats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fats"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_calories"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:text="@string/calories"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button_fats"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/button_fats"
        android:layout_marginTop="0dp" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:orientation='horizontal'
        android:weightSum="1"
        app:layout_constraintLeft_toLeftOf="@+id/graph"
        app:layout_constraintTop_toBottomOf="@+id/graph">

        <RadioButton
            android:id="@+id/radio_graphbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/graph_bar" />

        <RadioButton
            android:id="@+id/radio_graphline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/graph_line" />

        <RadioButton
            android:id="@+id/radio_graphpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0.34"
            android:text="@string/graph_point" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>