<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view23"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="7dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="?android:attr/colorMultiSelectHighlight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graphView"
        android:layout_width="360dp"
        android:layout_height="446dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/health_history"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation='horizontal'
        android:weightSum="1"
        app:layout_constraintTop_toBottomOf="@+id/graphView"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/graphView">

        <RadioButton
            android:id="@+id/radio_graphbar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/graph_bar" />

        <RadioButton
            android:id="@+id/radio_graphline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/graph_line" />

        <RadioButton
            android:id="@+id/radio_graphpoint2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="0.34"
            android:text="@string/graph_point" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>
