<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.myfoodmapapp.myfoodmapapp.data.fragments.HomeFragment">

    <View
        android:id="@+id/view7"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginEnd="7dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="?android:attr/colorMultiSelectHighlight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/addmeal"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/foodName_txt"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:layout_marginStart="31dp"
        android:ems="10"
        android:hint="@string/meal_details"

        android:inputType="text|textCapWords"
        android:selectAllOnFocus="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_getData"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_getData"
        android:layout_width="312dp"
        android:layout_height="74dp"
        android:text="@string/addmeal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/meal_search"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/foodName_txt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_addDate" />

    <ImageButton
        android:id="@+id/button_addDate"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="26dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/date_picker_description"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_calendar"
        android:text="@string/date_of_meal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="34dp"
        android:defaultFocusHighlightEnabled="true"
        android:ems="10"
        android:hint="@string/date_of_meal"
        android:inputType="none"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/button_addDate"
        app:layout_constraintTop_toTopOf="@+id/button_addDate" />

    <ProgressBar
        android:id="@+id/mprogressbar"
        android:layout_width="312dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_getData"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/load_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toTopOf="@+id/mprogressbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</android.support.constraint.ConstraintLayout>
